--- a/Analisando_Preços_das_Ações_da_Magazine_Luiza.ipynb
+++ b/Analisando_Preços_das_Ações_da_Magazine_Luiza.ipynb
@@ -78,7 +78,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 412,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "import pandas as pd\n",
         "import numpy as np\n"
       ],
-      "execution_count": 413,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
         "import plotly\n",
         "import plotly.offline as py"
       ],
-      "execution_count": 414,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "from plotly.offline import plot, iplot\n",
         "plotly.offline.init_notebook_mode(connected=True)"
       ],
-      "execution_count": 415,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,7 +165,7 @@
       "source": [
         "from pandas_datareader import data as wb"
       ],
-      "execution_count": 416,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "source": [
         "df = wb.DataReader('MGLU3.SA', data_source='yahoo', start=('2011-5-1'))"
       ],
-      "execution_count": 470,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 471,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 472,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +438,7 @@
       "source": [
         "df.to_csv('/content/drive/My Drive/AnaliseBolsa/df_magalu.csv')"
       ],
-      "execution_count": 420,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
       "source": [
         "df = pd.read_csv('/content/drive/My Drive/AnaliseBolsa/df_magalu.csv')"
       ],
-      "execution_count": 421,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
       "source": [
         "df.rename(columns={'Date': 'Data', 'High': 'Máxima', 'Low':'Mínima', 'Open': 'Abertura','Close':'Fechamento','Adj Close':'Fechamento_Aj'}, inplace = True)"
       ],
-      "execution_count": 422,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 423,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +595,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 424,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -713,7 +713,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 425,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +754,7 @@
       "source": [
         "df = df.drop(columns=['Volume','Fechamento_Aj'])"
       ],
-      "execution_count": 426,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 427,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
       "source": [
         "df[['Data','Máxima','Mínima','Abertura','Fechamento']].replace(0,np.NAN)"
       ],
-      "execution_count": 428,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +964,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 429,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
         "import plotly.io as pio\n",
         "pio.renderers"
       ],
-      "execution_count": 430,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1039,7 @@
       "source": [
         "pio.renderers.default = \"colab\""
       ],
-      "execution_count": 431,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1075,7 @@
         "fig = dict(data=data, layout=layout)\n",
         "py.iplot(fig)\n"
       ],
-      "execution_count": 432,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1187,7 +1187,7 @@
         "fig = go.Figure(data=data,layout=layout)\n",
         "py.iplot(fig)"
       ],
-      "execution_count": 433,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1281,7 +1281,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 434,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1386,7 +1386,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 435,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
         "df['Retorno_Simples'] = (df['Fechamento'] / df['Fechamento'].shift(1)) - 1\n",
         "print (df['Retorno_Simples'])"
       ],
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1530,7 +1530,7 @@
       "source": [
         ""
       ],
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1557,7 +1557,7 @@
         "fig = dict(data=data, layout=layout)\n",
         "py.iplot(fig)\n"
       ],
-      "execution_count": 437,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1633,7 +1633,7 @@
         "Md_Retorno_Simples_d = df['Retorno_Simples'].mean()\n",
         "Md_Retorno_Simples_d"
       ],
-      "execution_count": 438,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1661,7 +1661,7 @@
       "source": [
         "print ('Taxa Média de Retorno Simples Diário: ',str(round(Md_Retorno_Simples_d, 3)) + ' %')"
       ],
-      "execution_count": 439,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1698,7 +1698,7 @@
       "source": [
         "Md_Retorno_Simples_y = df['Retorno_Simples'].mean() * 250 * 100"
       ],
-      "execution_count": 440,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1713,7 +1713,7 @@
       "source": [
         "print ('Taxa Média de Retorno Simples Anual: ',str(round(Md_Retorno_Simples_y, 2)) + ' %')"
       ],
-      "execution_count": 441,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1746,7 +1746,7 @@
         "Dispersao = df['Retorno_Simples'].std()*250**0.5 \n",
         "Dispersao\n"
       ],
-      "execution_count": 442,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1774,7 +1774,7 @@
       "source": [
         "print ('Dispersão: ',str(round(Dispersao, 2)) + ' %')"
       ],
-      "execution_count": 443,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1816,7 +1816,7 @@
         "df['Retorno_Log'] = np.log(df['Fechamento'] / df['Fechamento'].shift(1))\n",
         "print (df['Retorno_Log'])"
       ],
-      "execution_count": 444,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1862,7 +1862,7 @@
         "fig = dict(data=data, layout=layout)\n",
         "py.iplot(fig)\n"
       ],
-      "execution_count": 445,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1938,7 +1938,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 446,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2057,7 +2057,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 447,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2180,7 +2180,7 @@
       "source": [
         "Md_Retorno_Log_d = df['Retorno_Log'].mean() * 100"
       ],
-      "execution_count": 448,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2195,7 +2195,7 @@
       "source": [
         "print ('Taxa Média de Retorno Log Diário: ',str(round(Md_Retorno_Log_d, 2)) + ' %')"
       ],
-      "execution_count": 449,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2223,7 +2223,7 @@
       "source": [
         "Retorno_Log_y = df['Retorno_Log'].mean() * 250 * 100"
       ],
-      "execution_count": 450,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2238,7 +2238,7 @@
       "source": [
         "print ('Taxa média de retorno log anual: ',str(round(Retorno_Log_y, 2)) + ' %')"
       ],
-      "execution_count": 451,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2257,7 +2257,7 @@
       "source": [
         "Dispersao_Log = df['Retorno_Log'].std()*250**0.5"
       ],
-      "execution_count": 452,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2272,7 +2272,7 @@
       "source": [
         "print ('Dispersão: ',str(round(Dispersao_Log, 2)) + ' %')"
       ],
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2305,7 +2305,7 @@
         "for t in tickers:\n",
         "    df_2[t] = wb.DataReader(t, data_source='yahoo', start='2016-1-1', end='2020-12-31')['Adj Close']    "
       ],
-      "execution_count": 454,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2321,7 +2321,7 @@
       "source": [
         "df_2"
       ],
-      "execution_count": 455,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2452,7 +2452,7 @@
       "source": [
         "df_2.info()"
       ],
-      "execution_count": 456,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2484,7 +2484,7 @@
       "source": [
         "df_2.describe()"
       ],
-      "execution_count": 457,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2592,29 +2592,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cd747219-f70c-4cdd-88d0-5f4b91c9dbd1"
+        "outputId": "530a4b9c-7ead-44c2-ea5a-8f1e8598d464"
       },
       "source": [
-        "df_3 = np.log(df2 / df2.shift(1))\n",
+        "df_3 = np.log(df_2 / df_2.shift(1))\n",
         "print (df_3)"
       ],
-      "execution_count": 458,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "      MGLU3.SA     ^BVSP\n",
-            "0          NaN       NaN\n",
-            "1     0.009976  0.006575\n",
-            "2    -0.090581 -0.015346\n",
-            "3    -0.142549 -0.026145\n",
-            "4     0.004181 -0.002042\n",
-            "...        ...       ...\n",
-            "1237  0.006380  0.002858\n",
-            "1238 -0.007580  0.012886\n",
-            "1239  0.011151  0.010080\n",
-            "1240  0.001187  0.003555\n",
-            "1241 -0.012099 -0.001416\n",
+            "            MGLU3.SA     ^BVSP\n",
+            "Date                          \n",
+            "2016-01-04       NaN       NaN\n",
+            "2016-01-05  0.009976  0.006575\n",
+            "2016-01-06 -0.090581 -0.015346\n",
+            "2016-01-07 -0.142549 -0.026145\n",
+            "2016-01-08  0.004181 -0.002042\n",
+            "...              ...       ...\n",
+            "2020-12-22  0.006380  0.002858\n",
+            "2020-12-23 -0.007580  0.012886\n",
+            "2020-12-28  0.011151  0.010080\n",
+            "2020-12-29  0.001187  0.003555\n",
+            "2020-12-30 -0.012099 -0.001416\n",
             "\n",
             "[1242 rows x 2 columns]\n"
           ],
@@ -2635,7 +2636,7 @@
         "cov = df_3.cov()*250\n",
         "print(cov)"
       ],
-      "execution_count": 459,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2661,7 +2662,7 @@
         "covmerc = cov.iloc[0,1]\n",
         "covmerc"
       ],
-      "execution_count": 460,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2690,7 +2691,7 @@
         "varmerc = df_3['^BVSP'].var() * 250\n",
         "varmerc"
       ],
-      "execution_count": 461,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2719,7 +2720,7 @@
         "beta = covmerc/varmerc\n",
         "beta"
       ],
-      "execution_count": 462,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2746,10 +2747,11 @@
         "outputId": "a422f5fd-def0-4639-b349-48d4cbf71828"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
         "df_3.plot(figsize=(15,6))\n",
         "plt.show()"
       ],
-      "execution_count": 463,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2788,7 +2790,7 @@
         "elif beta == 1:\n",
         "  print('O índice BETA de {} da ação Magalu é considerado NEUTRO'.format(round(beta,2)))\n"
       ],
-      "execution_count": 464,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
